2014-01-15  JJ Allaire <jj@rstudio.org>

        ** R/RcppLdpath.R: don't quote paths on windows

2014-01-14  JJ Allaire <jj@rstudio.org>

        * DESCRIPTION: bump version to 0.10.2.3
        * R/Attributes.R: handle build paths with spaces on windows
        * R/RcppLdpath.R: handle build paths with spaces on windows
        * R/tools.R: handle build paths with spaces on windows
        * src/Timer.cpp: fix OSX build (remove __MACH__ define check)
        * R/: set svn eol-style native for source files
        * src/: set svn eol-style native for source files 
        * inst/include/: set svn eol-style native for source files 

2014-01-13  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: use plugin includes in cppFunction; stop with 
        explicit error on Windows then the Rcpl libPath or sourceCpp
        target file contains spaces in it's path; add source file directory
        as an include path for sourceCpp; special handling for sourceCpp
        include paths on windows
        * man/pluginsAttribute.Rd: clarify which fields of plugin are
        used by sourceCpp

2014-01-12  JJ Allaire <jj@rstudio.org>

        * DESCRIPTION: bump version to 0.10.2.2
        * NAMESPACE: add registerPlugin function
        * R/Attributes.R: add registerPlugin function; add plugins parameter
        to cppFunction
        * man/cppFunction.Rd: documentation updates
        * man/pluginsAttribute.Rd: documentation updates
        * man/registerPlugin: documentation updates

2014-01-11  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: initial support for Rcpp::plugins attribute; add
        built-in cpp11 plugin
        * src/attributes.cpp: initial support for Rcpp::plugins attribute

2014-01-04  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: null check on pkginfo depends field

2013-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/Timer.cpp (Rcpp): Applied refinement of previously applied