@@ -1,6 +1,8 @@
 2014-01-15  JJ Allaire <jj@rstudio.org>
 
-        ** R/RcppLdpath.R: don't quote paths on windows
+        * R/Attributes.R: don't add source directory as an include path for
+        sourceCpp; fix duplicate inclusion of Rcpp directory
+        * R/RcppLdpath.R: don't quote paths on windows
 
 2014-01-14  JJ Allaire <jj@rstudio.org>
 
